[package]
name = "systems"
version = "0.1.0"
authors = ["Kiley Owen <yelikdev@gmail.com>"]

[dependencies]
log = "0.3.6"
find_folder = "0.3.0"
components = { path="../components" }
event = { path="../event" }
event_enums = { path="../event_enums" }
neural = { path="../neural" }

[features]
g_glutin = ["event_enums/g_glutin"]
g_sdl2 = ["event_enums/g_sdl2"]
