[package]
name = "systems"
version = "0.1.0"
authors = ["Kiley Owen <yelikdev@gmail.com>"]

[dependencies]
log = "0.3.6"
find_folder = "0.3.0"
specs = "0.7.0"
gfx = "0.12.1"
graphics = { path="../graphics" }
base_comps = { path="../base_comps" }
event_core = { path="../event_core" }
base_events = { path="../base_events" }
neural = { path="../neural" }
utils = { path="../utils" }
#
# [features]
# g_glutin = ["event_enums/g_glutin"]
# g_sdl2 = ["event_enums/g_sdl2"]
